output/dev/llvm/booleq.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/booleq.llvm:8:13: error: '@print_int' defined with type 'void (i32)*'
  call void @print_int(i1 true)
            ^
